--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^5.0.0",
+    "normalize.css": "^8.0.1",
     "sass-loader": "^10.1.1",
     "vue-template-compiler": "^2.6.11"
   },
